syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (OrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (OrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (Empty);

  // HealthCheck metodini e'lon qilish
  rpc HealthCheck (Empty) returns (HealthCheckResponse);
}

message CreateOrderRequest {
  string userId = 1;
  string product = 2;
  double price = 3;
}

message GetOrderByIdRequest {
  string id = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string product = 2;
  double price = 3;
}

message DeleteOrderRequest {
  string id = 1;
}

message OrderResponse {
  string id = 1;
  string userId = 2;
  string product = 3;
  double price = 4;
}

message HealthCheckResponse {
  string status = 1;
}

message Empty {}
